# k8s-operator

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.githooks/: pre-commit
crates/k8s-operator-controller/: Cargo.toml
crates/k8s-operator-controller/src/: builder.rs  events.rs  finalizer.rs  leader.rs  lib.rs  reconciler.rs  status.rs
crates/k8s-operator-core/: Cargo.toml
crates/k8s-operator-core/src/: error.rs  lib.rs  state.rs  traits.rs  types.rs
crates/k8s-operator-derive/: Cargo.toml
crates/k8s-operator-derive/src/: lib.rs
crates/k8s-operator-raft/: Cargo.toml  build.rs
crates/k8s-operator-raft/proto/: raft.proto
crates/k8s-operator-raft/src/: config.rs  discovery.rs  lib.rs  membership.rs  network.rs  node.rs  state_machine.rs
crates/k8s-operator-storage/: Cargo.toml
crates/k8s-operator-storage/src/: lib.rs  memory.rs  rocksdb_storage.rs  traits.rs
examples/simple-operator/: Cargo.toml
examples/simple-operator/src/: main.rs
proto/: raft.proto
src/: lib.rs  operator.rs
src/raft/: cluster.rs  compaction.rs  config.rs  discovery.rs  health.rs  leader.rs  mod.rs  node.rs  types.rs
src/raft/network/: client.rs  factory.rs  mod.rs  server.rs
src/raft/storage/: combined_storage.rs  mod.rs  rocksdb_storage.rs
