[package]
name = "k8s-operator-controller"
version = "0.1.0"
edition = "2021"
description = "Kubernetes controller runtime for k8s-operator framework"
license = "MIT OR Apache-2.0"

[dependencies]
k8s-operator-core = { path = "../k8s-operator-core" }
k8s-operator-raft = { path = "../k8s-operator-raft" }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
futures = { workspace = true }
schemars = { workspace = true }
chrono = "0.4"
