[package]
name = "simple-operator"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
k8s-operator = { path = "../.." }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }
anyhow = "1"
